# Litera-AI-App

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
apps/: __init__.py
apps/ai/: README.md  __init__.py
apps/backend/: .env.example  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260707_0001_initial_schema.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/routes/: assessment.py  auth.py  health.py  learning.py  notifications.py  profile.py  quiz.py  sync.py  teacher.py
apps/backend/app/api/v1/schemas/: auth.py  common.py  learning.py  profile.py  sync.py  teacher.py
apps/backend/app/core/: config.py  security.py
apps/backend/app/infrastructure/db/: base.py  session.py
apps/backend/app/infrastructure/db/models/: __init__.py  assessment.py  identity.py  learning.py
apps/backend/app/services/: mock_store.py
apps/backend/tests/: test_ai_decision_rules.py  test_health.py
apps/mobile/: README.md  analysis_options.yaml  pubspec.yaml
docs/: README.md
docs/ai/: 14_ai_workflow.md
docs/api/: 05_openapi.yaml
docs/architecture/: 03_system_architecture.md
docs/database/: 04_database_design_erd.md
docs/design/: 15_ui_wireframe.md  16_design_system.md
docs/diagrams/: 09_user_flow.md  10_use_case_diagram.md  11_activity_diagram.md  12_sequence_diagram.md  13_class_diagram.md
docs/mobile/: 06_folder_structure.md  07_state_management_flow.md  08_navigation_flow.md
docs/planning/: 17_sprint_planning.md
(+119 files in other folders)
